@@ -7,7 +7,7 @@ import joshie.enchiridion.helpers.MCClientHelper;
 import joshie.progression.api.ISpecialItemFilter;
 import joshie.progression.helpers.ItemHelper;
 import joshie.progression.helpers.PlayerHelper;
-import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.init.Items;
 import net.minecraft.item.ItemStack;
 import net.minecraft.potion.PotionEffect;
@@ -23,22 +23,24 @@ public class RewardPotion extends RewardBaseItemFilter implements ISpecialItemFi
         super("potioneffect", 0xFF2C7373);
         BROKEN = new ItemStack(Items.potionitem, 1, 0);
     }
-    
+
     @Override
     public String[] getSpecialFilters() {
-        return new String[]  { "potioneffect" };
+        return new String[] { "potioneffect" };
     }
 
     @Override
     public void reward(UUID uuid) {
-        EntityPlayer player = PlayerHelper.getPlayerFromUUID(uuid);
-        if (player != null) {
-            ItemStack stack = ItemHelper.getRandomItem(filters, null);
-            for (PotionEffect effect : Items.potionitem.getEffects(stack)) {
-                if (randomVanilla) player.addPotionEffect(new PotionEffect(effect));
-                else {
-                    int id = customid >= 0 ? customid : effect.getPotionID();
-                    player.addPotionEffect(new PotionEffect(id, duration, amplifier, false, particles));
+        List<EntityPlayerMP> players = PlayerHelper.getPlayersFromUUID(uuid);
+        for (EntityPlayerMP player : players) {
+            if (player != null) {
+                ItemStack stack = ItemHelper.getRandomItem(filters, null);
+                for (PotionEffect effect : Items.potionitem.getEffects(stack)) {
+                    if (randomVanilla) player.addPotionEffect(new PotionEffect(effect));
+                    else {
+                        int id = customid >= 0 ? customid : effect.getPotionID();
+                        player.addPotionEffect(new PotionEffect(id, duration, amplifier, false, particles));
+                    }
                 }
             }
         }
